# watched.back

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: FindMysqlpp.cmake
debian/: changelog  control
include/: alerter.h  backend.h  central.h  common.h  config.h.in
luaAlerters/: demo.lua  email.lua
sql/: schema.sql
src/: agentClient.cpp  agentManager.cpp  alerter.cpp  backend.cpp  central.cpp  config.cpp  dbTools.cpp  log.cpp  ressourceClient.cpp  servicesClient.cpp  statAggregator.cpp
sws/: server_http.hpp
tools/conf/: back.config.json.in
tools/logrotate/: watched.back.in
tools/systemd/: watched.back.service.in
